finished implementing sampling time and splitting by category

--- a/t_test.ipynb
+++ b/t_test.ipynb
@@ -16,8 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet('data/Aize-studet-project-time-series.parquet')\n",
-    "df"
+    "#df = pd.read_parquet('data/Aize-studet-project-time-series.parquet')"
    ]
   },
   {
@@ -26,8 +25,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.set_index('timestamp')\n",
-    "df"
+    "#df = df.set_index('timestamp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''dataframes = {}\n",
+    "\n",
+    "for cat in df['category'].unique():\n",
+    "    df[df['category'] == cat].to_parquet(f'data/{cat}.parquet')\n",
+    "    #dataframes[cat] = df[df['category'] == cat]\n",
+    "\n",
+    "motor = dataframes['Motor']\n",
+    "pump_process = dataframes['Pump Process']\n",
+    "pump_monitoring = dataframes['Pump Monitoring (BN)']'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "motor = pd.read_parquet('data/motor.parquet')\n",
+    "motor = motor.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "motor.head()"
    ]
   },
   {
@@ -39,9 +73,29 @@
     "sensor_list = pd.read_csv('data/sensor_list.txt', sep=':', header=None)\n",
     "sensor_list.columns = ['label', 'sampling time']\n",
     "sensor_list['label'] = sensor_list['label'].str[:-14] # remove the \" sampling time\"\n",
+    "sensor_list['sampling time'] = sensor_list['sampling time'].str[:-8].astype('float64')\n",
+    "\n",
+    "def category(row):\n",
+    "    if 'Pump Process' in row['label']:\n",
+    "        return 'Pump Process'\n",
+    "    elif 'Motor' in row['label']:\n",
+    "        return 'Motor'\n",
+    "    else:\n",
+    "        return 'Pump Monitoring (BN)'\n",
+    "\n",
+    "def re_label(row, categories):\n",
+    "    for category in categories:\n",
+    "        if category in row['label']:\n",
+    "            return row['label'].replace(category+' ','')\n",
     "\n",
     "\n",
-    "sensor_list.head()"
+    "sensor_list['category'] = sensor_list.apply(lambda row : category(row), axis=1)\n",
+    "sensor_list['label'] = sensor_list.apply(lambda row : re_label(row, sensor_list['category'].unique()), axis=1)\n",
+    "sensor_list.loc[sensor_list['label'] == \"RPM\", \"label\"] = 'Motor RPM'\n",
+    "sensor_list = sensor_list.drop(['category'],axis=1)\n",
+    "#display(sensor_list['label'].unique())\n",
+    "#display(motor['label'].unique())\n",
+    "motor = pd.merge(motor, sensor_list, on='label')"
    ]
   },
   {
@@ -50,8 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2023 = df.loc[(df.index >= pd.Timestamp('2023-01-01'))]\n",
-    "df2023"
+    "motor = motor.set_index('timestamp')"
    ]
   },
   {
@@ -60,14 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframes = {}\n",
-    "\n",
-    "for cat in df2023['category'].unique():\n",
-    "   dataframes[cat] = df2023[df2023['category'] == cat]\n",
-    "\n",
-    "motor = dataframes['Motor']\n",
-    "pump_process = dataframes['Pump Process']\n",
-    "pump_monitoring = dataframes['Pump Monitoring (BN)']"
+    "motor = motor.loc[(motor.index >= pd.Timestamp('2023-01-01'))]\n",
+    "motor"
    ]
   },
   {
@@ -76,9 +123,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for key in dataframes.keys():\n",
+    "'''for key in dataframes.keys():\n",
     "    print(f'The value counts of {key}:')\n",
-    "    display(dataframes[key]['label'].value_counts())"
+    "    display(dataframes[key]['label'].value_counts())'''"
    ]
   },
   {
