started on constants file and finished logic for adding units

--- a/t_test.ipynb
+++ b/t_test.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import constants"
    ]
   },
   {
@@ -16,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_parquet('data/Aize-studet-project-time-series.parquet')"
+    "df = pd.read_parquet('data/Aize-studet-project-time-series-v2.parquet')"
    ]
   },
   {
@@ -25,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = df.set_index('timestamp')"
+    "df = df.set_index('timestamp')"
    ]
   },
   {
@@ -34,7 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''dataframes = {}\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframes = {}\n",
     "\n",
     "for cat in df['category'].unique():\n",
     "    df[df['category'] == cat].to_parquet(f'data/{cat}.parquet')\n",
@@ -42,7 +52,7 @@
     "\n",
     "motor = dataframes['Motor']\n",
     "pump_process = dataframes['Pump Process']\n",
-    "pump_monitoring = dataframes['Pump Monitoring (BN)']'''"
+    "pump_monitoring = dataframes['Pump Monitoring (BN)']"
    ]
   },
   {
@@ -70,32 +80,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensor_list = pd.read_csv('data/sensor_list.txt', sep=':', header=None)\n",
-    "sensor_list.columns = ['label', 'sampling time']\n",
-    "sensor_list['label'] = sensor_list['label'].str[:-14] # remove the \" sampling time\"\n",
+    "sensor_list = pd.read_csv('data/sensor_list_v2.txt', sep=':', header=None, names=['label', 'sampling time'])\n",
+    "sensor_units = pd.read_csv('data/sensor_units.txt', sep='delimiter', header=None, names=['unit'])\n",
+    "sensor_list['unit'] = sensor_units['unit'].str.split().str[-1]\n",
+    "\n",
+    "sensor_list['label'] = sensor_list['label'].str[:-22] # remove the \" average sampling time\"\n",
     "sensor_list['sampling time'] = sensor_list['sampling time'].str[:-8].astype('float64')\n",
     "\n",
     "def category(row):\n",
-    "    if 'Pump Process' in row['label']:\n",
-    "        return 'Pump Process'\n",
-    "    elif 'Motor' in row['label']:\n",
-    "        return 'Motor'\n",
-    "    else:\n",
-    "        return 'Pump Monitoring (BN)'\n",
+    "    for cat in constants.CATEGORIES: \n",
+    "        if cat in row['label']:\n",
+    "            return cat\n",
     "\n",
-    "def re_label(row, categories):\n",
-    "    for category in categories:\n",
+    "def re_label(row):\n",
+    "    for category in constants.CATEGORIES:\n",
     "        if category in row['label']:\n",
     "            return row['label'].replace(category+' ','')\n",
     "\n",
-    "\n",
     "sensor_list['category'] = sensor_list.apply(lambda row : category(row), axis=1)\n",
-    "sensor_list['label'] = sensor_list.apply(lambda row : re_label(row, sensor_list['category'].unique()), axis=1)\n",
+    "sensor_list['label'] = sensor_list.apply(lambda row : re_label(row), axis=1)\n",
     "sensor_list.loc[sensor_list['label'] == \"RPM\", \"label\"] = 'Motor RPM'\n",
-    "sensor_list = sensor_list.drop(['category'],axis=1)\n",
-    "#display(sensor_list['label'].unique())\n",
+    "#sensor_list = sensor_list.drop(['category'],axis=1)\n",
+    "display(sensor_list)\n",
     "#display(motor['label'].unique())\n",
-    "motor = pd.merge(motor, sensor_list, on='label')"
+    "#motor = pd.merge(motor, sensor_list, on='label')"
    ]
   },
   {
