Started on visualizing EDA on different categories

--- a/pyspark_motor.ipynb
+++ b/pyspark_motor.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Want to check motor failure 2017.05.24"
+    "### Want to check motor failures on specific dates"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "    return df\n",
     "\n",
     "for df in motor_subsets.keys():\n",
-    "    motor_subsets[df] = filter_time(motor_subsets[df], '2017-05-10', '2017-06-01')"
+    "    motor_subsets[df] = filter_time(motor_subsets[df], '2017-03-01', '2017-6-01')"
    ]
   },
   {
