Finished initial EDA on motor and pump process

--- a/EDA/motor.ipynb
+++ b/EDA/motor.ipynb
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rpm = pre_process.filter_and_resample(motor_subsets['rpm'])"
+    "rpm = pre_process.filter_and_resample(motor_subsets['rpm'], start_date='2017-05-01', end_date='2019-01-01')"
    ]
   },
   {
