--- a/EDA/pumping_process.ipynb
+++ b/EDA/pumping_process.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "utils.plot_with_not(outlet_pressure, filtered_notification_df)"
+    "utils.plot_with_not(outlet_temperature, filtered_notification_df)"
    ]
   },
   {
@@ -214,6 +214,76 @@
    "metadata": {},
    "source": [
     "# Suction Pressure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suction_pressure = pre_process.filter_and_resample(pump_process_subsets['suction_pressure'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.plot_with_not(suction_pressure, filtered_notification_df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bypass Valve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bypass_valve = pre_process.filter_and_resample(pump_process_subsets['bypass_valve'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.plot_with_not(bypass_valve, filtered_notification_df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inlet Filter dP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inlet_filter_dp = pre_process.filter_and_resample(pump_process_subsets['inlet_filter_dp'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.plot_with_not(inlet_filter_dp, filtered_notification_df)"
    ]
   }
  ],
