--- a/EDA/motor.ipynb
+++ b/EDA/motor.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from pyspark.sql.functions import when, lit, to_date\n",
     "import plotly.graph_objects as go\n",
     "\n",
@@ -170,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rpm = pre_process.filter_and_resample(motor_subsets['rpm'], start_date='2017-05-01', end_date='2019-01-01')"
+    "rpm = pre_process.filter_and_resample(motor_subsets['rpm'])"
    ]
   },
   {
@@ -180,6 +181,25 @@
    "outputs": [],
    "source": [
     "utils.plot_with_not(rpm, filtered_notification_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pre_process.clean_motor_off([de_bearing_temp, nde_bearing_temp, nde_vibration, winding_temperature, rpm])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.plot_with_not(df, filtered_notification_df)"
    ]
   }
  ],
